RESOLVED FIXED199656
Fix unsafe usage of makeWeakPtr() in CMTimebaseEffectiveRateChangedCallback()
https://bugs.webkit.org/show_bug.cgi?id=199656
Summary Fix unsafe usage of makeWeakPtr() in CMTimebaseEffectiveRateChangedCallback()
Chris Dumez
Reported 2019-07-09 20:44:47 PDT
Fix unsafe usage of makeWeakPtr() in CMTimebaseEffectiveRateChangedCallback().
Attachments
Patch (6.96 KB, patch)
2019-07-09 20:49 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-07-09 20:49:26 PDT
Eric Carlson
Comment 2 2019-07-10 10:24:47 PDT
Comment on attachment 373815 [details] Patch Thanks Chris!
Chris Dumez
Comment 3 2019-07-10 10:34:25 PDT
Comment on attachment 373815 [details] Patch Clearing flags on attachment: 373815 Committed r247309: <https://trac.webkit.org/changeset/247309>
Chris Dumez
Comment 4 2019-07-10 10:34:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-07-10 10:35:17 PDT
Note You need to log in before you can comment on or make changes to this bug.